--- a/SistemaHospitalUNI/src/InternalFrames/FacturaExt.form
+++ b/SistemaHospitalUNI/src/InternalFrames/FacturaExt.form
@@ -58,13 +58,10 @@
                           <Component id="jTextField2" alignment="1" min="-2" pref="170" max="-2" attributes="0"/>
                           <Component id="jTextField1" alignment="1" min="-2" pref="170" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="jButton4" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="33" pref="33" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jButton4" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="33" pref="33" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <Component id="jPanel1" pref="560" max="32767" attributes="0"/>
