--- a/SistemaHospitalUNI/src/PermisosUsuarios/AsignacionPermisos.form
+++ b/SistemaHospitalUNI/src/PermisosUsuarios/AsignacionPermisos.form
@@ -146,7 +146,7 @@
                   </Group>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnPermisos" pref="50" max="32767" attributes="0"/>
+                  <Component id="btnPermisos" pref="52" max="32767" attributes="0"/>
                   <Component id="jButton2" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -175,7 +175,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jScrollPane1" alignment="0" pref="165" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" alignment="0" pref="166" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -240,17 +240,17 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel1" alignment="1" pref="172" max="32767" attributes="0"/>
+              <Component id="lblImagen" alignment="1" pref="231" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+              <Component id="lblImagen" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="lblImagen">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="No hay fotografia"/>
