--- a/SistemaHospitalUNI/src/PermisosUsuarios/AsignacionPermisos.form
+++ b/SistemaHospitalUNI/src/PermisosUsuarios/AsignacionPermisos.form
@@ -11,6 +11,9 @@
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="internalFrameOpened" listener="javax.swing.event.InternalFrameListener" parameters="javax.swing.event.InternalFrameEvent" handler="formInternalFrameOpened"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -34,8 +37,8 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="jLabel5" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnPermisos" min="-2" pref="120" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnPermisos" pref="0" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="251" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -45,14 +48,14 @@
                                   <Component id="jLabel7" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                                   <Component id="jLabel8" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="txtEspecialidad" alignment="1" max="32767" attributes="0"/>
                                   <Component id="txtDireccion" alignment="1" max="32767" attributes="0"/>
                                   <Component id="txtEstado" alignment="1" max="32767" attributes="0"/>
                                   <Component id="txtCedula" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtUsuario" max="32767" attributes="0"/>
-                                  <Component id="txtNombre" alignment="0" min="-2" pref="226" max="-2" attributes="0"/>
+                                  <Component id="txtNombre" alignment="0" pref="226" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -60,12 +63,12 @@
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
                               <Component id="cmbId" min="-2" pref="0" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanel2" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jButton2" min="-2" pref="120" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="241" max="-2" attributes="0"/>
+                              <Component id="jButton2" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
